--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ if (SUPPORT_PNG)
 	set(HAVE_LD_VERSION_SCRIPT OFF CACHE BOOL "" FORCE)
 	target_compile_definitions(SDL2_image PRIVATE -DLOAD_PNG)
 
+	add_subdirectory(external/zlib-1.2.11)
 	add_subdirectory(external/libpng-1.6.37)
 	include_directories(external/libpng-1.6.37)
 	target_link_libraries(SDL2_image PRIVATE png)
